# cgroup-monitor

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yaml  python-publish.yaml
cgroup-manager/: __init__.py  main_monitor.py
cgroup_monitor/: __init__.py  main_monitor.py  v1_manager.py  v1_monitor.py  v2_manager.py  v2_monitor.py
docs/: conf.py  index.rst
docs/source/: cgroup_monitor.rst  modules.rst
tests/: path_test.py  test_path.py
