[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py37, py38, py39, py310, py311, flake8

[gh-actions]
python =
    3.7: py37, flake8
    3.8: py38, flake8
    3.9: py39, flake8
    3.10: py310, flake8
    3.11: py311, flake8

[testenv]
commands = python -m unittest discover
deps = .[test]

[testenv:flake8]
commands = flake8 cgroup_monitor/
deps = flake8

[flake8]
max-line-length = 120
"""