[metadata]
name = cgroup-monitor
version = 0.1.0
author = Viraj Thakkar
author_email = vdthakkar111@gmail.com
description = A simple library to monitor CPU and Memory usage only using cgroups. Mainly created to monitor the resources inside the container.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veedata/cgroup-monitor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cgroup-monitor
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cgroup-monitor
